--- a/src/net/charabia/jsmoothgen/application/gui/StaticWizard.form
+++ b/src/net/charabia/jsmoothgen/application/gui/StaticWizard.form
@@ -109,7 +109,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
               <Image iconType="3" name="/icons/stock_web-support.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Error Management"/>
+            <Property name="text" type="java.lang.String" value="User Interactions"/>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="m_leftButtonsGroup"/>
             </Property>
