--- a/src/net/charabia/jsmoothgen/application/gui/MainFrame.form
+++ b/src/net/charabia/jsmoothgen/application/gui/MainFrame.form
@@ -86,6 +86,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Exit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuExitActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
