--- a/src/net/charabia/jsmoothgen/application/gui/CompilationDialog.form
+++ b/src/net/charabia/jsmoothgen/application/gui/CompilationDialog.form
@@ -37,7 +37,9 @@
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="null"/>
+          <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+            <TitledBorder title="Compilation Information"/>
+          </Border>
         </Property>
       </Properties>
       <Constraints>
